--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,2 @@
 
-
-VITE_API_URL=https://calendar-backend-node.vercel.app/api
-VITE_API_URL_LOCAL=http://localhost:4001/api
+VITE_API_URL=http://localhost:4001/api
